--- a/workflow.yaml
+++ b/workflow.yaml
@@ -1,8 +1,10 @@
 name: Deploy web app to Azure Static Web Apps
 env:
-  APP_LOCATION: "/" # location of your client code
-  API_LOCATION: "api" # location of your API source code (optional)
-  OUTPUT_LOCATION: "build" # location of client code build output
+  APP_LOCATION: "automotive-maintenance-pro"
+  API_LOCATION: "api"
+  OUTPUT_LOCATION: ".next"
+  NODE_VERSION: "18.x"
+
 on:
   push:
     branches:
@@ -12,6 +14,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          
+      - name: Install Dependencies
+        working-directory: ${{ env.APP_LOCATION }}
+        run: npm install
+        
       - name: Build And Deploy
         uses: Azure/static-web-apps-deploy@v1
         with:
