chore: update Azure workflow and configuration for improved deployment process

--- a/automotive-maintenance-pro/package.json
+++ b/automotive-maintenance-pro/package.json
@@ -1,7 +1,11 @@
 {
+  "name": "automotive-maintenance-pro",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:azure": "next build",
     "start": "next start",
     "lint": "next lint"
   }
