--- a/workflow.yaml
+++ b/workflow.yaml
@@ -1,33 +1,38 @@
-name: Deploy web app to Azure Static Web Apps
-env:
-  APP_LOCATION: "automotive-maintenance-pro"
-  API_LOCATION: "api"
-  OUTPUT_LOCATION: ".next"
-  NODE_VERSION: "18.x"
+name: Azure Static Web Apps CI/CD
 
 on:
   push:
     branches:
-      - azure-static-web-app
+      - main
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
+    branches:
+      - main
+
 jobs:
-  build_and_deploy:
+  build_and_deploy_job:
     runs-on: ubuntu-latest
+    name: Build and Deploy Job
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
       
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: '18.x'
           
       - name: Install Dependencies
-        working-directory: ${{ env.APP_LOCATION }}
-        run: npm install
-        
+        run: |
+          cd automotive-maintenance-pro
+          npm install
+          
       - name: Build And Deploy
+        id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          app_location: ${{ env.APP_LOCATION }}
-          api_location: ${{ env.API_LOCATION }}
-          output_location: ${{ env.OUTPUT_LOCATION }}
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_AMBITIOUS_SKY_03831211E }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          action: "upload"
+          app_location: "automotive-maintenance-pro"
+          output_location: "automotive-maintenance-pro/.next"
+          skip_app_build: false
