--- a/automotive-maintenance-pro/package.json
+++ b/automotive-maintenance-pro/package.json
@@ -8,5 +8,14 @@
     "build:azure": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "dependencies": {
+    "@react-spring/web": "^9.7.3",
+    "axios": "^1.9.0",
+    "framer-motion": "^11.0.8",
+    "next": "14.1.1",
+    "openai": "^4.102.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
