--- a/automotive-maintenance-pro/package.json
+++ b/automotive-maintenance-pro/package.json
@@ -10,12 +10,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-spring/web": "^9.7.3",
+    "@react-spring/web": "^10.0.1",
     "axios": "^1.9.0",
     "framer-motion": "^11.0.8",
     "next": "14.1.1",
     "openai": "^4.102.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "19.1.5",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.8.3"
   }
 }
