--- a/automotive-maintenance-pro/package.json
+++ b/automotive-maintenance-pro/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build:azure": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
