--- a/automotive-maintenance-pro/package.json
+++ b/automotive-maintenance-pro/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "@react-spring/web": "^10.0.1",
     "axios": "^1.9.0",
     "framer-motion": "^11.0.8",
