--- a/automotive-maintenance-pro/package.json
+++ b/automotive-maintenance-pro/package.json
@@ -17,7 +17,8 @@
     "next": "14.1.1",
     "openai": "^4.102.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@types/react": "19.1.5",
